# try-funix

./: .gitignore  .gitmodules  README.md  flake.nix  pyproject.toml
src/: gen_img_demo.py  openai_img.py
