[tool.poetry]
name = "funix-test"
version = "0.1.0"
description = "just a test of funix"
authors = ["luochen1990@gmail.com"]

[tool.poetry.dependencies]
python = ">=3.10,<4"
funix = "^0.5.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
